--- a/docker/docker-compose-cpu.yml
+++ b/docker/docker-compose-cpu.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
   experiment:
     volumes:
-      - .:/app
+      - ..:/app
     build:
       context: .
       dockerfile: cpu.Dockerfile
-    image: U-Net
+    image: tf_cpu_sample
