--- a/docker/docker-compose-gpu.yml
+++ b/docker/docker-compose-gpu.yml
@@ -3,8 +3,8 @@ services:
   experiment:
     runtime: nvidia
     volumes:
-      - .:/app
+      - ..:/app
     build:
       context: .
       dockerfile: gpu.Dockerfile
-    image: U-Net
+    image: tf_gpu_sample
