--- a/kronos-config.yml
+++ b/kronos-config.yml
@@ -11,7 +11,7 @@ git_url: 'https://github.com/tanimutomo/U-Net.git'
 git_branch: 'master'
 
 # project directory path
-pj_root: '~/Project'
+pj_root: '/home/tanimu/Project'
 
 # The path of the project's data directory
 data_dir: ''
